--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Mapa">
+    tools:context=".Mapa"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/fbtnCompartir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right"
+        android:text="Compartir Ruta"/>
 
     <WebView
+        android:id="@+id/WMaps"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:id="@+id/WMaps"></WebView>
+        android:layout_height="600dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Holaaaaaa"
-        android:id="@+id/TUbicacion"/>
+
 
 </LinearLayout>
