--- a/app/src/main/res/layout/activity_detalle_ruta.xml
+++ b/app/src/main/res/layout/activity_detalle_ruta.xml
@@ -9,9 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        >
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_marginTop="20dp"
