--- a/app/src/main/res/layout/cuadro_compartir.xml
+++ b/app/src/main/res/layout/cuadro_compartir.xml
@@ -23,8 +23,16 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Compartir Ruta!"
+        android:text="@string/btnCompartrir"
         android:id="@+id/btnCompartirRuta"
+        android:layout_marginBottom="10dp"/>
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnCancelarComp"
+        android:id="@+id/btnCancelarC"
         android:layout_marginBottom="10dp"/>
 
 </LinearLayout>
