--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/splashscreenrutaudea">
+        android:drawable="@drawable/fondosplash">
     </item>
+    <item android:drawable="@drawable/iconsplash"
+        android:width="250dp"
+        android:height="150dp"
+        android:gravity="center">
+
+</item>
 </layer-list>
