--- a/app/src/main/res/layout/activity_detalle_ruta.xml
+++ b/app/src/main/res/layout/activity_detalle_ruta.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +7,26 @@
     tools:context=".DetalleRuta"
     android:orientation="vertical">
 
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/wvDetalle" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/detallebar">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/foroDetalle"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/colorPrimaryDark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,8 +38,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
                 android:id="@+id/detalleNombre"
-                android:text="nombre"/>
+                android:text="nombre"
+                android:textColor="@color/primary_light"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,12 +50,14 @@
 
                 <ImageButton
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_height="45dp"
                     android:id="@+id/imgBtnHangouts"
                     android:src="@drawable/hangouts"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter"
+                    android:background="@color/transparente"
+                    android:layout_marginBottom="5dp"/>
 
                 <ImageButton
                     android:layout_width="50dp"
@@ -54,17 +67,21 @@
                     android:layout_marginLeft="20dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter"
+                    android:background="@color/transparente"
+                    android:layout_marginBottom="5dp"/>
 
                 <ImageButton
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_height="48dp"
                     android:id="@+id/imgBtnWhatsApp"
                     android:src="@drawable/whtasapp"
                     android:layout_marginLeft="20dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter"
+                    android:background="@color/transparente"
+                    android:layout_marginBottom="5dp"/>
 
             </LinearLayout>
 
@@ -72,10 +89,7 @@
 
     </LinearLayout>
 
-    <WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/wvDetalle" />
 
 
-</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
