--- a/app/src/main/res/layout/fragment_rutas.xml
+++ b/app/src/main/res/layout/fragment_rutas.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rutas">
+    tools:context=".Rutas"
+    android:background="@color/icons">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:src="@drawable/backgroundback"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="40dp"
+        />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="82dp"
+        android:src="@drawable/backgroundbacktop"
+        android:layout_gravity="top" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvRutas"/>
 
-</LinearLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
