--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#607D8B</color>
+    <color name="colorPrimary">#4f7f0f</color>
+    <color name="colorPrimaryDark">#214e18</color>
+    <color name="colorAccent">#7db006</color>
     <color name="primary_light">#B2DFDB</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="transparente">#00ffffff</color>
 </resources>
