--- a/app/src/main/res/values/zonas_area_metropolitana.xml
+++ b/app/src/main/res/values/zonas_area_metropolitana.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="zonas">
+        <item>Todos</item>
         <item>Aguas Frias</item>
         <item>Aldea Pablo VI</item>
         <item>Alejandria</item>
