--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/icons"
+    android:background="@color/blanco"
     tools:context=".Perfil">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="82dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/backgroundbacktop"
         android:layout_gravity="top" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/backgroundback"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="40dp"/>
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="50dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,7 +111,7 @@
                 android:text="@string/BTLogOut"
                 android:id="@+id/BLogOut"
                 android:layout_marginTop="20dp"
-                android:background="#80F44336"/>
+                android:background="@color/rojoTransp"/>
 
         </LinearLayout>
 
