--- a/app/src/main/res/layout/fragment_rutas.xml
+++ b/app/src/main/res/layout/fragment_rutas.xml
@@ -4,20 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Rutas"
-    android:background="@color/icons">
+    android:background="@color/blanco">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/backgroundback"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="40dp"
-        />
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="50dp" />
+
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="82dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/backgroundbacktop"
-        android:layout_gravity="top" />
+        android:layout_gravity="top"
+        android:layout_marginTop="35dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,14 +28,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#9974C81E">
+            android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:gravity="center"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/blanco"
                 android:textStyle="bold"
                 android:padding="5dip"
                 android:text="Buscar Por Barrio:   "/>
