--- a/app/src/main/res/layout/item_spiner.xml
+++ b/app/src/main/res/layout/item_spiner.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:textSize="20dp"
     android:gravity="center"
-    android:textColor="@color/primary_text"
+    android:textColor="@color/blanco"
     android:textStyle="bold"
     android:paddingBottom="5dip"
     />
