--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="primary_light">#B2DFDB</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="blanco">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="transparente">#00ffffff</color>
+    <color name="rojoTransp">#80F44336</color>
 </resources>
