--- a/app/src/main/res/values/filtro_zonas.xml
+++ b/app/src/main/res/values/filtro_zonas.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="zonas">
-        <item>--</item>
+    <string-array name="zonas_filtro">
+        <item>Todos</item>
         <item>Aguas Frias</item>
         <item>Aldea Pablo VI</item>
         <item>Alejandria</item>
