--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <style name="RaisenButtonCerrarSession" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/rojoTransp</item>
+        <item name="colorControlHighlight">@color/blanco</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+
 </resources>
