--- a/app/src/main/res/layout/fragment_mapa.xml
+++ b/app/src/main/res/layout/fragment_mapa.xml
@@ -10,15 +10,41 @@
     <WebView
         android:id="@+id/WMaps"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:layout_height="match_parent" />
+    <LinearLayout
         android:layout_width="wrap_content"
+        android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="150dp"
-        app:srcCompat="@drawable/share"/>
+        android:layout_marginBottom="143dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:elevation="6dp"
+            android:layout_marginRight="-40dp"
+            android:background="@drawable/buton_circle"
+            android:paddingTop="5dp"
+            android:paddingRight="45dp"
+            android:paddingBottom="5dp"
+            android:text="Compartir Ruta"
+            android:paddingLeft="15dp"
+            android:textStyle="bold"
+            android:textColor="#FAFAFA"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/share"
+            android:layout_marginBottom="10dp"/>
+
+
+
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
